--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.1.0",
